--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </main>
 
 <footer>
-	<p>&copy; 2023 Sushant Gaire. All rights reserved.</p>
+	<p>&copy; 2023 SG Producton. All rights reserved.</p>
 </footer>
 </body>
 </html>
