--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<main>
 		<h2>About Me</h2>
 
-		<img src="https://scontent.fktm16-1.fna.fbcdn.net/v/t1.6435-9/61799467_626229617891374_2635347209331146752_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=174925&_nc_ohc=6wzFNiAzBG8AX8Xt-W2&tn=du18aLBmMk8MJ2x5&_nc_ht=scontent.fktm16-1.fna&oh=00_AfC1H3XL6KOLUTmY51FsuKtfQkPjxBFfrVDcMiWtsd51fw&oe=6421677A" alt="Avatar">
+		<img src="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/63817326729438827593367031628388211380294475923792290393389910405656537464837">
 
 		<p>Hi, My name is Sushant Gaire, a student in class 9 at Kalika Manavgyan Secondary School. I have a strong interest in science and have created a website for a school project. I am an ambitious and driven student who is passionate about learning and exploring new topics. Keep up the good work!.</p>
 
@@ -117,9 +117,9 @@
 		<ul>
 			<li>Web Design</li>
 			<li>Computer</li>
-			<li>Noob</li>
-			<li>Gajadi</li>
-			<li>Ganja</li>
+			<li>Geography</li>
+			<li>World</li>
+			<li>Environment</li>
 		</ul>
 	<p>Whether you need a simple website or a complex web application, I have the skills and experience to bring your project to life. Please don't hesitate to contact me if you have any questions or if you'd like to discuss a potential project.</p>
 </main>
