--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<main>
 		<h2>About Me</h2>
 
-		<img src="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/63817326729438827593367031628388211380294475923792290393389910405656537464837">
+		<img src="https://i.seadn.io/gae/l6BF8r64L9UvBbo8jH6zIVlx9i6plmjsAuUe22dfR3QJaUzQo-hVMF7gHFCtM4ywyFqPv3dMyfqslS-7Udd0aIsg4fhS9ygS-jquR2Q?auto=format&w=1000">
 
 		<p>Hi, My name is Sushant Gaire, a student in class 9 at Kalika Manavgyan Secondary School. I have a strong interest in science and have created a website for a school project. I am an ambitious and driven student who is passionate about learning and exploring new topics. Keep up the good work!.</p>
 
